Images left and right

--- a/finalhour.html
+++ b/finalhour.html
@@ -91,9 +91,9 @@
 								<h3> Early Desgin & Challenges</h3>
 								Inspired by spaceships and architecture in Star Wars, Cowboy Bebop and Rick and Morty. I aimed for a retro sci-fi aesthetic, while not being too overly futuristic.I really liked the semi-claustrophobic mechanical feel in some of their designs, especially in star wars ships, These are were some of my reference images used for my sketches. <br><br>
 								<img src="images/FinalHour/I1.png" alt="Draft" class="responsive-image">
-								Ship Inspirtaions<br>
+								<br>
 								<img src="images/FinalHour/I2.png" alt="Draft" class="responsive-image">
-								Inside Inspirations<br><br>
+								External and internal spacship inspirations.<br><br>
 
 								These are my early paper sketches.<br>
 
@@ -103,73 +103,74 @@
 
 
 								<br>I wanted a ship design that felt almost circular to give easy paths leading to the main area connecting all the rooms. This design met all my needs the most and was my favourite, so I jumped straight into engine and started building it and testing the scale.<br>
-																																																																									  <img src="images/FinalHour/S1.jpg" alt="Draft" class="half-image">
+								<img src="images/FinalHour/S1.jpg" alt="Draft" class="half-image">
 								<br>When I started building the level in Unity, I quickly realized that curved walls were difficult to work with using Unity’s primitives. Awkward geometry and alignment issues made the design non-viable, so I touched it up and made a digital draft in Photopea, covering the curved walls with straight ones in front of them. This was my first challenge in understanding how 2D designs translate into 3D space and a simple solution to unforeseen issue.<br><br>
 
-								This was the first rough digital draft created for the level design:
-																																																																																																																									   <img src="images/FinalHour/D1.png" alt="Draft" class="half-image">
+								
+																																																																																																																									   <p>
+																																																																																																																										   <span class="image left"><img src="images/FinalHour/D1.png" alt="Draft" class="half-image"></span>This was the first rough digital draft created for the level design.
 
-								<br>After more communication with the narrative designer, they were happy with the design so I re-made it in higher quality, and got feedback from the rest of the team.<br>
-
-
-
-								<br>After even more reviews from the narrative designer and team, I refined the digital draft and started blocking out the playable areas in engine.<br>
-								<img src="images/FinalHour/FD3.png" alt="Draft" class="responsive-image">
-
-								<br>I left it up to the narrative designer to place the items for each fetch quest and position for each NPC. <br>
-
-								<br>To save time and create a more lived-in feel, I used barricades and furniture to block off non-playable areas, making the ship feel bigger without overextending the level. I made the grey box by putting the level design above into engine on a large cube and building the area on top of it. This design was slightly altered after some more feedback from the team. I got back into the engine and made the final version with primitives, it looked like this: <br>
-
-								<img src="images/FinalHour/D2.png" alt="Draft" class="responsive-image">
-								<br>As you can see, there are some slight differences to the 2D design, but that’s expected when translating a 2D image to 3D. One recurring issue was trying to align walls perfectly without creating awkward collisions or gaps. I solved this by using cylinders to cover the edges where walls met. This trick worked beautifully and added a nice polish to the level.<br>
-								<img src="images/FinalHour/Hallway.png" alt="Draft" class="half-image">
-
-								<br>This is what the level looked like from above with the shader. You never see this angle but I thought it was fun to look at!<br>
-								<img src="images/FinalHour/D3.png" alt="Draft" class="responsive-image">
+																																																																																																																										   <br>After more communication with the narrative designer, they were happy with the design so I re-made it in higher quality, and got feedback from the rest of the team.<br>
 
 
-								<br>I was extremely pleased with the level of design I created in such a short time. <br><br>
 
-								Here are some other grey box screenshots of the project, they aren’t from the gameplay pov but it was interesting to see the detail change between with and without the shader.<br><br>
+																																																																																																																										   <br>After even more reviews from the narrative designer and team, I refined the digital draft and started blocking out the playable areas in engine.<br>
+																																																																																																																										   <img src="images/FinalHour/FD3.png" alt="Draft" class="responsive-image">
 
+																																																																																																																										   <br>I left it up to the narrative designer to place the items for each fetch quest and position for each NPC. <br>
 
-								<div class="screenshot-gallery" data-gallery="1">
-									<button class="scroll-button left" onclick="scrollGallery(-1, 1)"></button>
-									<div class="screenshot-container">
-										<div class="screenshot-row">
-											<img src="images/FinalHour/SS1.png" alt="Draft" class="responsive-image">
-											<img src="images/FinalHour/SS2.png" alt="Draft" class="responsive-image">
-											<img src="images/FinalHour/SS3.png" alt="Draft" class="responsive-image">
-											<img src="images/FinalHour/SS4.png" alt="Draft" class="responsive-image">
-											<img src="images/FinalHour/SS5.png" alt="Draft" class="responsive-image">
-										</div>
-									</div>
-									<button class="scroll-button right" onclick="scrollGallery(1, 1)"></button>
-								</div>
+																																																																																																																										   <br>To save time and create a more lived-in feel, I used barricades and furniture to block off non-playable areas, making the ship feel bigger without overextending the level. I made the grey box by putting the level design above into engine on a large cube and building the area on top of it. This design was slightly altered after some more feedback from the team. I got back into the engine and made the final version with primitives, it looked like this: <br>
 
-								<div class="screenshot-gallery" data-gallery="2">
-									<button class="scroll-button left" onclick="scrollGallery(-1, 2)"></button>
-									<div class="screenshot-container">
-										<div class="screenshot-row">
-											<img src="images/FinalHour/SSS1.png" alt="Draft" class="responsive-image">
-											<img src="images/FinalHour/SSS2.png" alt="Draft" class="responsive-image">
-											<img src="images/FinalHour/SSS3.png" alt="Draft" class="responsive-image">
-											<img src="images/FinalHour/SSS4.png" alt="Draft" class="responsive-image">
-											<img src="images/FinalHour/SSS5.png" alt="Draft" class="responsive-image">
-											<img src="images/FinalHour/SSS6.png" alt="Draft" class="responsive-image">
-										</div>
-									</div>
-									<button class="scroll-button right" onclick="scrollGallery(1, 2)"></button>
-								</div>
+																																																																																																																										   <img src="images/FinalHour/D2.png" alt="Draft" class="responsive-image">
+																																																																																																																										   <br>As you can see, there are some slight differences to the 2D design, but that’s expected when translating a 2D image to 3D. One recurring issue was trying to align walls perfectly without creating awkward collisions or gaps. I solved this by using cylinders to cover the edges where walls met. This trick worked beautifully and added a nice polish to the level.<br>
+																																																																																																																										   <img src="images/FinalHour/Hallway.png" alt="Draft" class="half-image">
+
+																																																																																																																										   <br>This is what the level looked like from above with the shader. You never see this angle but I thought it was fun to look at!<br>
+																																																																																																																										   <img src="images/FinalHour/D3.png" alt="Draft" class="responsive-image">
 
 
-								<br>
+																																																																																																																										   <br>I was extremely pleased with the level of design I created in such a short time. <br><br>
+
+																																																																																																																										   Here are some other grey box screenshots of the project, they aren’t from the gameplay pov but it was interesting to see the detail change between with and without the shader.<br><br>
 
 
-								I spent four days on the level design, leaving three days for audio work and a final day for polishing both.<br><br>
+																																																																																																																										   <div class="screenshot-gallery" data-gallery="1">
+																																																																																																																											   <button class="scroll-button left" onclick="scrollGallery(-1, 1)"></button>
+																																																																																																																											   <div class="screenshot-container">
+																																																																																																																												   <div class="screenshot-row">
+																																																																																																																													   <img src="images/FinalHour/SS1.png" alt="Draft" class="responsive-image">
+																																																																																																																													   <img src="images/FinalHour/SS2.png" alt="Draft" class="responsive-image">
+																																																																																																																													   <img src="images/FinalHour/SS3.png" alt="Draft" class="responsive-image">
+																																																																																																																													   <img src="images/FinalHour/SS4.png" alt="Draft" class="responsive-image">
+																																																																																																																													   <img src="images/FinalHour/SS5.png" alt="Draft" class="responsive-image">
+																																																																																																																												   </div>
+																																																																																																																											   </div>
+																																																																																																																											   <button class="scroll-button right" onclick="scrollGallery(1, 1)"></button>
+																																																																																																																										   </div>
+
+																																																																																																																										   <div class="screenshot-gallery" data-gallery="2">
+																																																																																																																											   <button class="scroll-button left" onclick="scrollGallery(-1, 2)"></button>
+																																																																																																																											   <div class="screenshot-container">
+																																																																																																																												   <div class="screenshot-row">
+																																																																																																																													   <img src="images/FinalHour/SSS1.png" alt="Draft" class="responsive-image">
+																																																																																																																													   <img src="images/FinalHour/SSS2.png" alt="Draft" class="responsive-image">
+																																																																																																																													   <img src="images/FinalHour/SSS3.png" alt="Draft" class="responsive-image">
+																																																																																																																													   <img src="images/FinalHour/SSS4.png" alt="Draft" class="responsive-image">
+																																																																																																																													   <img src="images/FinalHour/SSS5.png" alt="Draft" class="responsive-image">
+																																																																																																																													   <img src="images/FinalHour/SSS6.png" alt="Draft" class="responsive-image">
+																																																																																																																												   </div>
+																																																																																																																											   </div>
+																																																																																																																											   <button class="scroll-button right" onclick="scrollGallery(1, 2)"></button>
+																																																																																																																										   </div>
 
 
-							</details>
+																																																																																																																										   <br>
+
+
+																																																																																																																										   I spent four days on the level design, leaving three days for audio work and a final day for polishing both.<br><br>
+
+
+</details>
 						</section>
 
 						<br />
