Final Hour, Sync and ecco udpated

--- a/syncandecco.html
+++ b/syncandecco.html
@@ -126,7 +126,7 @@
 
 								I approached the project by creating a roadmap that outlined our stage milestones and development progressions. During daily stand-ups, we outlined and integrated specific tasks that were recorded in a document and then put into Hack N Plan for task tracking. For the most part this worked well. Towards the end of the project, we introduced whiteboard-based sprint planning. This turned out to be much more effective. I wish we started using whiteboard sprints earlier, as it helped keep everyone on the same page and improved communication and work efficiency significantly.<br><br>
 
-								Here’s some screenshots of how we managed these tasks:<br>
+								Below are some screenshots of how we managed these tasks.<br>
 
 								<img src="images/SyncandEcco/Scope2.png" alt="Draft" class="responsive-image">
 								<img src="images/SyncandEcco/Scope1.png" alt="Draft" class="responsive-image">
