Click to expand for each section

--- a/beeranged.html
+++ b/beeranged.html
@@ -90,7 +90,7 @@
 						<section>
 							<h3> Economic prototype</h3>
 							<details>
-								<summary>   This project was a test to see how I could have manually changing numbers in a game (from the player), numbers increasing over time and trying to keep them both balanced.</summary>
+								<summary>  (Click to expand)  This project was a test to see how I could have manually changing numbers in a game (from the player), numbers increasing over time and trying to keep them both balanced.</summary>
 
 								Initially, I planned to create a tower defence game with spawning enemies, money systems, and upgrades. However, I wanted a bigger challenge and decided to focus on dynamic scaling enemies. At the time, I had just started playing Vampire Survivors, which inspired me to create a similar prototype. The first version wasn’t a game at all—it was just an Excel sheet. I used it to experiment with player and enemy stats scaling over time and while it was useful, it didn’t feel satisfying. I made the decision to expand and moved on to building a real game.
 								<br>
@@ -113,7 +113,7 @@
 						<section>
 							<h3>Keeping the game on theme</h3>
 							<details>
-								<summary> I initially wanted the game to be called “Deranged” but after a fun typo “Beeranged” was born. </summary>
+								<summary> (Click to expand) I initially wanted the game to be called “Deranged” but after a fun typo “Beeranged” was born. </summary>
 								<br>
 								I decided to stick with the bee theme as I already had the game concept made, so I only had to flesh it out, now with a fun twist. Beekeeper gear replaced traditional armor and all the items were bee-themed. Having a unique theme like this is something I’ll use again while designing future projects to give them that extra bit of flare.
 								<br>
@@ -128,7 +128,7 @@
 						<section>
 							<h3> Learning C#</h3>
 							<details>
-								<summary>  This was one of the first solo projects I had undertaken, so a massive hurdle I had to eventually tackle was C#. </summary>
+								<summary> (Click to expand)  This was one of the first solo projects I had undertaken, so a massive hurdle I had to eventually tackle was C#. </summary>
 
 								I had done basics in C# but mostly bools and storing variables. I knew I could’ve kept it simple, but I saw this as an opportunity to improve my programming skills.
 								<br>With the help of tutorials and resources like W3Schools, I spent a week improving my understanding of C#. I created:
@@ -151,7 +151,7 @@
 						<section>
 							<h3> Learning Aseprite</h3>
 							<details>
-								<summary>    At the start of the project, all the enemies and objects (excluding a rough player drawing) were just the default unity shapes..</summary>
+								<summary> (Click to expand)  At the start of the project, all the enemies and objects (excluding a rough player drawing) were just the default unity shapes..</summary>
 
 								I had little experience with game art and didn’t give it much thought during early development. A few months after I finished the project, inspired by childhood attempts at pixel art in MS Paint, I purchased Aseprite and started playing around with sprite art, leading to me making proper sprites for Beeranged.
 
@@ -169,7 +169,7 @@
 						<section>
 							<h3> Audio & Soundtrack</h3>
 							<details>
-								<summary> Off the bat, I was having regrets about choosing this brief.</summary>
+								<summary>  (Click to expand) Off the bat, I was having regrets about choosing this brief.</summary>
 								Like art, I had zero audio in the game whatsoever when I finished the first version. Returning to this, I hopped into Audacity again now with much more experience, visited the Soundsnap library (licensed) and got to work. Making the sound effects was easy, what I wanted to focus on was the soundtrack. In previous projects, I always felt the soundtrack didn't fit as I would find free-to-use songs that were not designed to fit my games. I took a different approach to Beeranged. Instead of using generic royalty-free tracks, I found three looping drum tracks that flowed into one another, each more intense than the last. This reflected the game’s increasing in difficulty over time and was perfect.
 								<br><br> Here are the drum loops:<br><br>
 
@@ -202,7 +202,7 @@
 						<section>
 							<h2> Takeaways</h2>
 							<details>
-								<summary>This is what I learnt on this project.</summary>
+								<summary> (Click to expand) This is what I learnt on this project.</summary>
 								<br><br> <br>
 								<h4> Spreadsheets</h4> Reflecting on my spreadsheet, I wish I did more on it, having scripts inside Excel that could’ve allowed me to automatically test more scenarios. Hopefully, I’ll revisit it in the future one day for this project.
 								<br> <h4> Theme matters</h4> A unique overarching theme may be difficult to keep consistent however it adds character to a game.
