--- a/finalhour.html
+++ b/finalhour.html
@@ -66,7 +66,7 @@
                     <section>
                         <h3> Designing the level</h3>
                         <details>
-                            <summary>  Approaching this project, I worked closely with the narrative designer asking heaps of questions regarding the game’s story and environmental context.</summary>
+                            <summary>  (Click to expand)  Approaching this project, I worked closely with the narrative designer asking heaps of questions regarding the game’s story and environmental context.</summary>
                             After discussions and reading over the script three times, I created a list of restraints for keeping the level design focused and within the scope this level - super important since it was a 1-week jam.<br><br>
 
                             They are as follows:<br>
@@ -185,7 +185,7 @@
                     <section>
                         <h3> Audacity Plug-ins</h3>
                         <details>
-                            <summary>I made all the audio files for this project excluding the music, which was composed by John Sharp.</summary>
+                            <summary> (Click to expand) I made all the audio files for this project excluding the music, which was composed by John Sharp.</summary>
 
                             <br><br>
 
