--- a/mindsisle.html
+++ b/mindsisle.html
@@ -102,7 +102,7 @@
 						<section>
 							<h3>Getting Started</h3>
 							<details>
-								<summary> Off the bat, I was having regrets about choosing this brief.</summary>
+								<summary> (Click to expand) Off the bat, I was having regrets about choosing this brief.</summary>
 								I only had 5 weeks to make an entire survival game by myself which sounded and was absolutely terrifying. I’d always wanted to make a survival game as they’re my favourite genre of game to play. I knew if I truly wanted to make it now was the time so I ignored my doubts and got straight to work.
 
 								<br /><br />The first thing I did was write down all the systems I wanted in the game:
@@ -141,7 +141,7 @@
 						<section>
 							<h3> Tutorials: Greatest enemy and hero</h3>
 							<details>
-								<summary>   To approach this, like any person starting a massive project solo I headed straight to YouTube.</summary>
+								<summary>  (Click to expand) To approach this, like any person starting a massive project solo I headed straight to YouTube.</summary>
 								I made the grave mistake of following 3 different survival game tutorial series, skimming through and trying to bring all the best bits together. This was a huge mistake. I created systems that either didn't work or weren't what I wanted all because I didn’t research the results! This was insanely frustrating as I wasted almost the entire first week, throwing out everything and eventually restarting.
 
 								<br /><br />  This issue would become more relevant towards the final systems in my game when certain systems wouldn't work together at all. I had to stop relying on finding the correct tutorial and start creating my systems around what I had. I managed to do this by making the quest system completely from scratch and it really boosted my confidence for the rest of the project.
@@ -176,7 +176,7 @@
 						<section>
 							<h3> Post-Processing </h3>
 							<details>
-								<summary> Something really important to me was creating different atmospheres for different areas of the map.</summary>
+								<summary> (Click to expand)  Something really important to me was creating different atmospheres for different areas of the map.</summary>
 
 								This was my first major 3D Unity game as a solo developer. I had never majorly touched lighting or this thing called “Post-processing.” I spent a good few hours playing around with post-processing profiles and was blown away by the results. I created different profiles to help show the player underwater, in a cave, in the daytime and nighttime. Looking back on it, I'm not sure how I would've created these environments without it.
 
@@ -192,7 +192,7 @@
 						<section>
 							<h3> Building System Troubles </h3>
 							<details>
-								<summary>   I was so excited to jump into this system as it’s always something I’ve loved playing around with in survival games.</summary>
+								<summary>  (Click to expand)   I was so excited to jump into this system as it’s always something I’ve loved playing around with in survival games.</summary>
 								This system I never want to create again, and hopefully, with the scripts I wrote for them, I won't ever have to. I created a building system similar to games like Rust and Ark Survival Evolved. It was functional in the end, but getting there was a nightmare.
 
 								<br /><br />I scrapped 4 previous systems that I had tried making, being stuck on the first one for 4 days. I threw it all out and restarted, then quickly restarted a second time, a third time, until I  landed on something that worked.
@@ -218,7 +218,7 @@
 						<section>
 							<h3> Prefabbing UI Elements</h3>
 							<details>
-								<summary> I had little experience working with setting up UI in previous games.</summary>
+								<summary>  (Click to expand) I had little experience working with setting up UI in previous games.</summary>
 								Buttons that switch or close a scene? Yep. Working settings UI with sliders for FOV, post-processing and graphic options, buttons to save the game, quit the game, inventories for chests and furnaces? Nope. I didn’t necessarily need any of these for the game as it was pretty close to a prototype, however, I was eager to expand my skill set. All the mentioned UI options you probably already guessed, I added them! Setting all up was much smoother than I thought, and Unity has really powerful UI tools that make this all a breeze.
 
 								<br /><br /> The biggest thing I took from this was creating prefabs for UI elements. This was something I had never considered before and doing it allowed me to create the inventory slots and all the different inventories. I did as it was something i’d picked up from a previous tutorial. Having UI prefabs made it easy to change the size of my player’s inventory, chests and furnaces without having to touch the code at all.
@@ -234,7 +234,7 @@
 						<section>
 							<h3> New software & Unity asset store</h3>
 							<details>
-								<summary>  Here’s where things got extra challenging.</summary>
+								<summary> (Click to expand)   Here’s where things got extra challenging.</summary>
 								I didn’t have access to Maya or Photoshop anymore, so I had to learn Blender and Krita. Learning both in one night was intense, but it paid off. Krita wasn’t really a challenge but jumping into Bllender was completely different from Maya. I created all the weapon models in Blender and drew the icons in Krita. Picking up new software is always handy for future use because I always find myself picking up new techniques I can apply in other applications. For example, when watching Blender tutorials I learnt how to use the 3D cursor tool (this is in Maya but I had never used it before) which made making the models so much easier.
 								<br /><br />
 								Here are some of the assets I created:<br />
@@ -258,7 +258,7 @@
 
 						<h2> Takeaways</h2>
 						<details>
-							<summary> What I learnt on this project.</summary>
+							<summary>  (Click to expand) What I learnt on this project.</summary>
 
 							<h4> Planning is super imporant</h4> Approaching such a big project by yourself can be overwhelming but lots of notetaking, checklists and whiteboard scheduling make a huge difference. Plan everything! Systems, timelines, art, assets, everything! Even if things don’t go exactly to plan, you’ll have a roadmap to keep you moving forward.
 							<br /><br /> <h4> Tutorials are OP</h4> Watch tutorials right until the end until applying them! Whenever you use tutorials make sure you understand the code, you can’t blindly copy something and expect it to work, especially when working with so many large systems. Tutorials are the best resources ever.
