--- a/nostringsattached.html
+++ b/nostringsattached.html
@@ -71,7 +71,7 @@
 						<section>
 							<h3>Brief creation</h3>
 							<details>
-								<summary> This was a student-led project that ran over six weeks, with teams randomly assigned from our cohort.</summary>
+								<summary> (Click to expand)  This was a student-led project that ran over six weeks, with teams randomly assigned from our cohort.</summary>
 
 								We had a team of three designers, five artists, and three programmers (a total of eleven of us). After pitching game ideas, our group chose my puppet-fighting concept.<br /><br />
 
@@ -96,7 +96,7 @@
 							<h3> Producing</h3>
 							<details>
 								<summary>
-									Initially, I was only focusing solely on leading the design but not long into the project I had to take a step up and take on the producer role too.
+									(Click to expand) Initially, I was only focusing solely on leading the design but not long into the project I had to take a step up and take on the producer role too.
 								</summary>
 
 
@@ -117,7 +117,7 @@
 						<section>
 							<h3> Combat system iteration</h3>
 							<details>
-								<summary>   Our original combat system leaned heavily on complexity having multiple stances, a manual stamina system and a form of weaponry.</summary>
+								<summary>   (Click to expand)  Our original combat system leaned heavily on complexity having multiple stances, a manual stamina system and a form of weaponry.</summary>
 								After feedback from our industry pitch, we realised a core identity issue in our game, we didn’t know if we were making a serious complex fighting game or a funny silly beat-up party game. As this was still early in pre-production, we had a team vote and the majority voted for a pivot. We stuck to one side and embraced the slapstick chaos party game.
 								<br /><br />
 								Here’s a quick overview of how the old combat system worked (complex):<br />
@@ -180,7 +180,7 @@
 						<section>
 							<h3> Prop Animations & Spawning</h3>
 							<details>
-								<summary>    Before working on No Strings Attached, I hadn’t really used the animation system in Unity. </summary>
+								<summary>   (Click to expand)   Before working on No Strings Attached, I hadn’t really used the animation system in Unity. </summary>
 								During development, learning it became one of my goals so I could use it for testing. Every project I take on I aim to learn at least one new core skill and I figured this would be something I’d use again in the future. I made simple animations for the props in our scene including, the waves, the birds and the ship sailing past. From learning it for testing, my animations made it into the final build of the game. They weren’t complicated animations at all but it opened up a door to a new skill set.
 
 								<br /><br />
@@ -198,7 +198,7 @@
 							<h3> Greyboxing</h3>
 							<details>
 								<summary>
-									Early on in the project, I put together the grey box scene for the game.
+									(Click to expand) Early on in the project, I put together the grey box scene for the game.
 								</summary>
 								When models were ready and unwrapped, I'd import them into the scene and we slowly got our final game scene. This is all pretty self-explanatory, however, I wanted to show some behind-the-scenes grey box screenshots of the game in development as seeing the final result was incredibly rewarding.
 								<br />
@@ -249,7 +249,7 @@
 						<section>
 							<h3> UI </h3>
 							<details>
-								<summary>  I sketched the initial concepts for some of our UI and how they would be shown to the player.</summary>
+								<summary>  (Click to expand)  I sketched the initial concepts for some of our UI and how they would be shown to the player.</summary>
 
 
 								Our whole game took place in one scene, including diegetic UI which reinforces the feeling of the player sitting in the audience of a theatre. We used the stage as the background for all of our menus and showed the info on sign paddles that were raised/lowered. The “cursor” was a spotlight that the player would move around with the joysticks. Here are some of the UI concepts I presented to the artists with the final results as well as some general captures of the games final UI. I want to re-iterate I DID not make the final assets, only the concepts.
@@ -273,7 +273,7 @@
 						<section>
 							<h3> Audio & Music</h3>
 							<details>
-								<summary>   This was my third time working on audio for a project, however, it was my first time in charge of music.</summary>
+								<summary>   (Click to expand)  This was my third time working on audio for a project, however, it was my first time in charge of music.</summary>
 								The music was a tedious task I worked on throughout the entire project. As none of us had any composing experience, it was up to me to find a soundtrack that would suit our game. This itself was a difficult task because we had to find a completely free-to-use track that fit our gameplay and setting. This task stayed with me right up to the end, and the final song wasn't chosen until a week before the final build. The track we ended up with actually was one of the first tracks I found when looking, so I did learn that sometimes working with what you have is better than looking for something you’ll most probably not find. Along with Josh, both of us edited this soundtrack to make it more fitting to the gameplay and loop seamlessly. I’ve since connected to several composers to avoid running into this situation in the future.
 								<br />
 								<br />
@@ -340,7 +340,7 @@
 						<section>
 							<h2> Takeaways</h2>
 							<details>
-								<summary> This is what I learnt on this project.</summary>
+								<summary> (Click to expand)  This is what I learnt on this project.</summary>
 
 								<h4> Leadership flexability</h4> This was my first time working on a large project of this size and going in with no expectations was a great strategy. Everybody has a different working style. This was something I had to learn early and take into account when communicating and planning with my team. You can’t plan for everything scenario and you need to learn to adapt to unexpected changes.
 								<br />
