--- a/syncandecco.html
+++ b/syncandecco.html
@@ -452,7 +452,7 @@
 								<div class="video-container">
 									<iframe width="560"
 											height="315"
-											src="https://www.youtube.com/embed/hoiamtB5q4E"
+											src="https://www.youtube.com/embed/4GHA22rxQAE"
 											title="YouTube video player"
 											frameborder="0"
 											allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
