Updated trailer for sync and ecco

--- a/syncandecco.html
+++ b/syncandecco.html
@@ -58,7 +58,7 @@
 									<div class="video-container">
 										<iframe width="560"
 												height="315"
-												src="https://www.youtube.com/embed/hoiamtB5q4E"
+												src="https://www.youtube.com/embed/4GHA22rxQAE"
 												title="YouTube video player"
 												frameborder="0"
 												allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -519,7 +519,7 @@
 						<a href="https://tombeeeeeeeeeee.github.io"> Thomas O'Brien</a>, Programmer<br>
 						<a href="https://rach_mw.artstation.com/">Rachel Missingham</a>, Artist<br>
 						<a href="https://hajicha.artstation.com/">Hachi Dinh</a>, Artist<br>
-						<a href="https://www.artstation.com/laurenct">Lauren Trinh</a>, Artist<br>
+						<a href="https://laurenct.artstation.com">Lauren Trinh</a>, Artist<br>
 						<a href="https://bold.pro/my/james-viola-231116174407?vsid=14e974c1-03b1-403c-8ca2-72d84e65e11a">James Viola</a>, Sound & Music<br>
 
 						<br>
