--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 			<!-- Project 1 -->
 			<section class="project-section" data-bg-opacity="0.2" style="background-image: url('images/section1bg.png');">
 				<a href="https://basalt-formations.itch.io/sync-and-ecco" class="image" target="_blank">
-					<img src="images/pic04.jpg" alt="Project Image" data-position="center center" />
+					<img src="images/SyncandEcco.png" alt="Project Image" data-position="center center" />
 				</a>
 				<div class="content">
 					<div class="inner">
